8227387: [lworld] TestLWorld fails with assert(\!is_always_locked()) failed: invariant